--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </ul>
     </div>
 
-    <audio id="clickSound" src="/sounds/btn_click.mp3" preload="auto"></audio>
-    <audio id="backgroundMusic" src="/sounds/MainMenuBGM.mp3" loop preload="auto"></audio>
+    <audio id="clickSound" src="sounds/btn_click.mp3" preload="auto"></audio>
+    <audio id="backgroundMusic" src="sounds/MainMenuBGM.mp3" loop preload="auto"></audio>
 
     <script src="mm.js"></script>
 </body>
