--- a/ttt.html
+++ b/ttt.html
@@ -65,9 +65,9 @@
   <!-- Reset button -->
   <button id="resetButton" title="Resets the game back">Reset Game</button>
 
-  <audio id="clickSound" src="/sounds/btn_click.mp3" preload="auto"></audio>
-  <audio id="backgroundMusic" src="/sounds/GameBGM.mp3" loop preload="auto"></audio>
-  <audio id="tileClick" src="/sounds/tile_select.mp3" preload="auto"></audio>
+  <audio id="clickSound" src="sounds/btn_click.mp3" preload="auto"></audio>
+  <audio id="backgroundMusic" src="sounds/GameBGM.mp3" loop preload="auto"></audio>
+  <audio id="tileClick" src="sounds/tile_select.mp3" preload="auto"></audio>
   
 
   <script src="script.js"></script>
