--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="stylesheet" rel="stylesheet" type="text/css" href="mainMenu.css">
     <link rel="icon" type="image/x-icon" href="favicon_ttt.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap">
     <title>Welcome to Krishna Tic Tac Toe game!</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
 
     <!-- Game menu -->
     <div id="menu">
-        <h2 class="menuContents"><a href="https://youtu.be/dQw4w9WgXcQ?si=n5-jCnyKCHAgpFRc" target="_blank">Main Menu</a></h2>
+        <h2 class="menuContents"><a href="https://youtu.be/dQw4w9WgXcQ?si=n5-jCnyKCHAgpFRc" target="_blank" title="Welcome to my Tic Tac Toe game! Try to find the two easter eggs I've hidden in the game!">Main Menu</a></h2>
         <a href="ttt.html"><button id="play" class="menuContents" title="Start the game">Play game</button></a>
         <button id="toggleSoundEffects" class="menuContents" title="Turn sound effects on or off">Turn Sound Effects On</button>
         <button id="toggleMusic" class="menuContents" title="Turn music on or off">Turn Music On</button>
